--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,24 @@
+aioredis==1.3.1
 asgiref==3.4.1
+async-timeout==3.0.1
 attrs==21.2.0
 autobahn==21.3.1
 Automat==20.2.0
 cffi==1.14.6
 channels==3.0.4
+channels-redis==3.3.0
 constantly==15.1.0
 cryptography==3.4.7
 daphne==3.0.2
 Django==3.2.6
+django-cors-headers==3.8.0
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.8.0
+hiredis==2.0.0
 hyperlink==21.0.0
 idna==3.2
 incremental==21.3.0
+msgpack==1.0.2
 Pillow==8.3.1
 psycopg2==2.9.1
 pyasn1==0.4.8
